@@ -41,3 +41,9 @@ Reworked my rarities into registries like all my other datapacks, as a result:
 Some stats are now datapacks!
 - "unlock spell" stats are now datapacks, meaning any spell you add, you can also add the unlock spell stat for it too.
 This also means the perk "spell" field is now useless, as it's a stat now.
+
+- mobs now have more elemental damage the higher their levels are. Ideally after mid level players should be forced to max their resistances.
+I could use suggestions on how to tell players that they WILL be one shotted if they don't focus on their resistances.
+There will be builds that don't focus on resistance maxing, but that would require specific uniques.
+- added max_worn_at_once to gear rarities. This way you can add rarity specific restrictions. You can even go wow like and make a Mega legendary or something and allow only 1 worn per character.
+- mobs now have same gear restrictions as players
